[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "publish"
version = "0.1.0"
description = "多平台内容发布格式转换与一键分发工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
    "rich>=12.0.0",
    "click>=8.1.0",
    "python-dotenv>=0.20.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
publish = "publish.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["publish*"]
